prevent background scroll on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -11,6 +11,7 @@ div,
 ul {
   margin: 0;
   padding: 0;
+  position: relative;
 }
 
 #title {
